--- a/k8s/operator.yml
+++ b/k8s/operator.yml
@@ -1,13 +1,21 @@
 apiVersion: v1
+kind: Namespace
+metadata:
+  name: andrew-space
+
+---
+apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: execution-plan-operator
+  namespace: andrew-space
 
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: execution-plan-operator
+  namespace: andrew-space
 spec:
   selector:
     matchLabels:
@@ -21,24 +29,20 @@ spec:
       serviceAccountName: execution-plan-operator
       containers:
         - name: operator
-          image: execution-plan-operator
+          image: kube-operator:0.0.1-SNAPSHOT
           imagePullPolicy: Never
           ports:
             - containerPort: 80
-
----
-apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRoleBinding
-metadata:
-  name: operator-admin
-subjects:
-  - kind: ServiceAccount
-    name: execution-plan-operator
-    namespace: andrew-space
-roleRef:
-  kind: ClusterRole
-  name: execution-plan-operator
-  apiGroup: ""
+          startupProbe:
+            httpGet:
+              path: /startup
+              port: 8080
+            initialDelaySeconds: 1
+          livenessProbe:
+            httpGet:
+              path: /healthz
+              port: 8080
+            initialDelaySeconds: 30
 
 ---
 apiVersion: rbac.authorization.k8s.io/v1
@@ -48,16 +52,13 @@ metadata:
 rules:
   - apiGroups:
       - ""
-    resources:
-      - deployments
-      - pods
-    verbs:
-      - '*'
-  - apiGroups:
+      - "extensions"
       - "apps"
     resources:
       - deployments
       - services
+      - pods
+      - pods/exec
     verbs:
       - '*'
   - apiGroups:
@@ -67,9 +68,23 @@ rules:
     verbs:
       - '*'
   - apiGroups:
-      - "executionplans.af"
+      - "ex.operator"
     resources:
-      - execution-plans
-      - execution-plans/status
+      - executionplans
+      - executionplans/status
     verbs:
       - '*'
+
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: execution-plan-operator-admin
+subjects:
+  - kind: ServiceAccount
+    name: execution-plan-operator
+    namespace: andrew-space
+roleRef:
+  kind: ClusterRole
+  name: execution-plan-operator
+  apiGroup: ""
