Adds additional label to sample deployment

--- a/k8s/nginx-sample-deployment.yml
+++ b/k8s/nginx-sample-deployment.yml
@@ -8,10 +8,12 @@ spec:
   selector:
     matchLabels:
       app: nginx-app
+      app.kubernetes.io/managed-by: execution-plan-operator
   template:
     metadata:
       labels:
         app: nginx-app
+        app.kubernetes.io/managed-by: execution-plan-operator
     spec:
       containers:
         - name: nginx-container
