Updates liveness probe endpoint

--- a/k8s/operator.yml
+++ b/k8s/operator.yml
@@ -34,7 +34,7 @@ spec:
             initialDelaySeconds: 1
           livenessProbe:
             httpGet:
-              path: /healthz
+              path: /health
               port: 8080
             initialDelaySeconds: 30
 
